--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ diesel = { version = "2.1", features =["postgres", "chrono"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
-
+log = "0.4"
 
 
 [dev-dependencies]
