--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
-name = "crate-registry"
+name = "crate_registry"
+default-run = "server"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,7 +13,9 @@ diesel = { version = "2.1", features =["postgres", "chrono"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = { version = "0.4", features = ["serde"] }
+clap = "4.1.6" 
 log = "0.4"
+argon2 = "0.5"
 
 
 [dev-dependencies]
